k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: task-manager-service
  labels:
    app: task-manager
spec:
  selector:
    app: task-manager
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: LoadBalancer
